# rufetch

./: Cargo.toml  README.md
rufetch/: rufetch.conf
rufetch/distros/: arch.ascii  arch.txt  default.ascii
src/: get_infos.rs  main.rs
